apt-dater (1.0.4) unstable; urgency=low

  * Travis CI: use docker for recent Debian build environment
     (github issue #139 by Lukas Kallies @kallies)
  * Bugfixes:
    - Fix Tcl filters never matching due to broken return code handling.
    - Do not fail on make install on updating due to symlinks creation.
      (github issue #131 by Robin Kluth @Commifreak)
    - Revert a82d3f7: default config value for 'err-pattern' should not
      use html entities.
      (github issue #124 by Stephan Sürken <absurd@debian.org>)

 -- Thomas Liske <liske@ibh.de>  

apt-dater (1.0.3) unstable; urgency=low

  * adsh: ssh wrapper which records ssh sessions using script
  * screen: add support for SCREENDIR env variable
    (github pull request #111 by Thomas Wouters @twouters)
  * Update to automake 1.15.
  * Bugfixes:
    - man: change config filenames (s/(apt-dater|hosts).config/$1.xml/g;)
      (Debian Bug#793100 by Stephan Sürken <absurd@debian.org>)
    - etc: take account of --sysconfdir
      (github issue #101 by Alex Dunn @dunn)
    - suppress I/O warnings triggered by XInclude
    - check libxml2 ABI interface
    - fix MAINTAINER env variable handling
    - replace MAINTAINER by AD_MAINTAINER environment variable
    - fix hooks/plugin-dir example and schema definition
      (github issue #100 by @fufroma)
    - fix syntax of string comparison in ssh-addonce
      (github pull request #103 by @jvsalo)
    - fix hosts stuck in refresh
      (Debian Bug#801994 by Stefan Bühler <stbuehler@lighttpd.net>)
    - use localstatedir in stead of static /var
      (github pull request #109 by Thomas Wouters @twouters)
    - recursive eval datarootdir fixing default value of XML_SCHEMA_DIR
      (github issue #112 by @kpengboy)
      (Debian Bug#826403 by Evgeni Golov <evgeni@debian.org>)
    - fix typo in german translation
      (Debian Bug#813103 by Alexander Schier <alexander_schier@yahoo.de>)
    - workaround for less: use errpattern with grep -P only and enable