@@ -1,16 +1,0 @@
-#!/bin/sh
-
-if [ -z "$TMUX_PANE" ]; then
-	exit 0
-fi
-
-case "$AD_ACTION" in
-refresh)
-	;;
-
-*)
-	tmux bind-key -T root q kill-pane
-	;;
-esac
-
-exit 0
